--- a/bower.json
+++ b/bower.json
@@ -28,7 +28,11 @@
   "dependencies": {
     "bourbon": "~4.2.6",
     "fastclick": "~1.0.6",
-    "foundation-sites": "^6.2.0"
+    "requirejs": "^2.2.0",
+    "foundation-sites": "^6.2.0",
+    "angular": "^1.5.2",
+    "angular-route": "^1.5.2",
+    "angular-mocks": "^1.5.2"
   },
   "overrides": {}
 }
