--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Frontend Developer Exercise",
   "dependencies": {
     "bower": "^1.7.7",
-    "foundation-sites": "^6.2.0"
+    "foundation-sites": "^6.2.0",
+    "gulp-html-validator": "0.0.5"
   },
   "private": true,
   "main": "gulpfile.js",
@@ -16,7 +17,10 @@
     "gulp-concat": "^2.6.0",
     "gulp-consolidate": "^0.2.0",
     "gulp-cssnano": "^2.1.0",
+    "gulp-html-angular-validate": "^0.2.0",
+    "gulp-html-minifier": "^0.1.8",
     "gulp-htmlmin": "^1.3.0",
+    "gulp-iconfont": "^6.0.0",
     "gulp-imagemin": "^2.4.0",
     "gulp-inject": "^3.0.0",
     "gulp-jshint": "^2.0.0",
@@ -33,9 +37,15 @@
     "gulp-w3c-css": "^0.1.2",
     "gulp-watch": "^4.3.5",
     "gulp.spritesmith": "^6.2.0",
+    "jasmine-core": "^2.4.1",
     "jshint": "^2.9.1",
     "jshint-stylish": "^2.1.0",
+    "karma": "^0.13.22",
+    "karma-jasmine": "^0.3.8",
+    "karma-phantomjs-launcher": "^1.0.0",
+    "karma-spec-reporter": "0.0.24",
     "lodash": "^4.3.0",
+    "phantomjs-prebuilt": "^2.1.6",
     "run-sequence": "^1.1.5",
     "spritesmith": "^3.1.0",
     "stream-series": "^0.1.1",
