--- a/.jshintrc
+++ b/.jshintrc
@@ -29,6 +29,7 @@
         "after": false,
         "afterEach": false,
         "expect": false,
-        "jQuery": false
+        "jQuery": false,
+        "define": false
     }
 }
