--- a/bower.json
+++ b/bower.json
@@ -24,15 +24,29 @@
     "Angular",
     "Exercise"
   ],
-  "devDependencies": {},
+  "devDependencies": {
+      "angular": "^1.5.2",
+      "angular-route": "^1.5.2",
+      "angular-mocks": "^1.5.2",
+      "angularAMD": "^0.2.1",
+      "almond": "^0.3.1"
+  },
   "dependencies": {
     "bourbon": "~4.2.6",
-    "fastclick": "~1.0.6",
     "requirejs": "^2.2.0",
-    "foundation-sites": "^6.2.0",
-    "angular": "^1.5.2",
-    "angular-route": "^1.5.2",
-    "angular-mocks": "^1.5.2"
+    "foundation-sites": "^6.2.0"
   },
-  "overrides": {}
+  "overrides": {
+      "foundation-sites": {
+          "main": [
+              "scss/foundation.scss",
+              "dist/foundation.js",
+              "dist/foundation.css"
+          ]
+      }
+  },
+  "resolutions": {
+    "requirejs": "^2.2.0",
+    "angular": "^1.5.2"
+  }
 }
