--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "Frontend Developer Exercise",
   "dependencies": {
     "bower": "^1.7.7",
-    "foundation-sites": "^6.2.0",
-    "gulp-html-validator": "0.0.5"
+    "foundation-sites": "^6.2.0"
   },
   "private": true,
   "main": "gulpfile.js",
@@ -21,6 +20,7 @@
     "gulp-html-minifier": "^0.1.8",
     "gulp-htmlmin": "^1.3.0",
     "gulp-iconfont": "^6.0.0",
+    "gulp-ignore": "^2.0.1",
     "gulp-imagemin": "^2.4.0",
     "gulp-inject": "^3.0.0",
     "gulp-jshint": "^2.0.0",
@@ -46,6 +46,7 @@
     "karma-spec-reporter": "0.0.24",
     "lodash": "^4.3.0",
     "phantomjs-prebuilt": "^2.1.6",
+    "requirejs": "^2.2.0",
     "run-sequence": "^1.1.5",
     "spritesmith": "^3.1.0",
     "stream-series": "^0.1.1",
