--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "gulp-ignore": "^2.0.1",
     "gulp-imagemin": "^2.4.0",
     "gulp-inject": "^3.0.0",
+    "gulp-jade": "^1.1.0",
     "gulp-jshint": "^2.0.0",
     "gulp-load-plugins": "^1.2.0",
     "gulp-notify": "^2.2.0",
+    "gulp-prettify": "^0.4.0",
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.5.4",
     "gulp-rev": "^7.0.0",
